--- a/index.html
+++ b/index.html
@@ -720,6 +720,7 @@
         <li class="icon hyhworld"><a href="http://hyhworld.com/" target="_blank"></a></li>
         <li class="icon BASF"><a href="https://www.basf.com/us/en.html" target="_blank"></a></li>
         <li class="icon wolframAlpha"><a href="https://www.wolframalpha.com/" target="_blank"></a></li>
+        <li class="icon biilabs"><a href="https://biilabs.io/" target="_blank"></a></li>
       </ul>
     </div>
   </main>
