--- a/index.html
+++ b/index.html
@@ -721,6 +721,10 @@
         <li class="icon BASF"><a href="https://www.basf.com/us/en.html" target="_blank"></a></li>
         <li class="icon wolframAlpha"><a href="https://www.wolframalpha.com/" target="_blank"></a></li>
         <li class="icon biilabs"><a href="https://biilabs.io/" target="_blank"></a></li>
+        <li class="icon hsinchu"><a href="http://www.hcaf.url.tw/" target="_blank"></a></li>
+        <li class="icon min"><a href="https://web.mcu.edu.tw/" target="_blank"></a></li>
+        <li class="icon sin"><a href="https://www.shu.edu.tw/" target="_blank"></a></li>
+        <li class="icon taiwan-business"><a href="http://www.roccoc.org.tw/" target="_blank"></a></li>
       </ul>
     </div>
   </main>
