--- a/index.html
+++ b/index.html
@@ -721,7 +721,7 @@
         <li class="icon BASF"><a href="https://www.basf.com/us/en.html" target="_blank"></a></li>
         <li class="icon wolframAlpha"><a href="https://www.wolframalpha.com/" target="_blank"></a></li>
         <li class="icon biilabs"><a href="https://biilabs.io/" target="_blank"></a></li>
-        <li class="icon hsinchu"><a href="http://www.hcaf.url.tw/" target="_blank"></a></li>
+        <li class="icon hsinchu"><a href="https://www.facebook.com/%E6%96%B0%E7%AB%B9%E7%B8%A3%E9%AB%94%E8%82%B2%E6%9C%83-177116919426975/" target="_blank"></a></li>
         <li class="icon min"><a href="https://web.mcu.edu.tw/" target="_blank"></a></li>
         <li class="icon sin"><a href="https://www.shu.edu.tw/" target="_blank"></a></li>
         <li class="icon taiwan-business"><a href="http://www.roccoc.org.tw/" target="_blank"></a></li>
