--- a/index.html
+++ b/index.html
@@ -542,6 +542,26 @@
       </div>
       <svg class="triangleBottom"><use xlink:href="#triangle_figure"/></svg>
     </ul>
+    <!-- roger wu -->
+    <ul class="roger-wu">
+      <!-- <svg class="triangleTop"><use xlink:href="#triangle_figure"/></svg> -->
+      <div class="wrap">
+        <li class="img"></li>
+        <ol class="text_group">
+          <li class="mainTitle">Roger Wu</li>
+          <li class="subtitle">Chief DApp Engineer</li>
+          <li class="resume"><p>Invited blockchain speaker in COSCUP 2018<br> Author of Ethereum ERC172<br> 1st Prize in 2018 DEXON DApps Hackathon</p></li>
+          <li class="link">
+            <ol>
+              <li class="icon github"><a href="https://github.com/Roger-Wu" target="_blank"></a></li>
+              <li class="icon facebook"><a href="https://www.facebook.com/gsetcrw" target="_blank"></a></li>
+              <li class="icon linkedin"><a href="https://www.linkedin.com/in/roger-wu/" target="_blank"></a></li>
+            </ol>
+          </li>
+        </ol>
+      </div>
+      <svg class="triangleBottom"><use xlink:href="#triangle_figure"/></svg>
+    </ul>
     <!-- Tom Lam -->
     <ul class="tom-lam">
       <!-- <svg class="triangleTop"><use xlink:href="#triangle_figure"/></svg> -->
@@ -601,20 +621,19 @@
       </div>
       <svg class="triangleBottom"><use xlink:href="#triangle_figure"/></svg>
     </ul>
-    <!-- roger wu -->
-    <ul class="roger-wu">
+    <!-- ryan lin -->
+    <ul class="ryan-lin">
       <!-- <svg class="triangleTop"><use xlink:href="#triangle_figure"/></svg> -->
       <div class="wrap">
         <li class="img"></li>
         <ol class="text_group">
-          <li class="mainTitle">Roger Wu</li>
-          <li class="subtitle">Chief DApp Engineer</li>
-          <li class="resume"><p>Invited blockchain speaker in COSCUP 2018<br> Author of Ethereum ERC172<br> 1st Prize in 2018 DEXON DApps Hackathon</p></li>
+          <li class="mainTitle">Ryan Lin</li>
+          <li class="subtitle">Advisor</li>
+          <li class="resume"><p>FinTech & Legal Consultant <br> APBA Legal Consultant<br> SRG of VASP （Exchanger）Drafter</p></li>
           <li class="link">
             <ol>
-              <li class="icon github"><a href="https://github.com/Roger-Wu" target="_blank"></a></li>
-              <li class="icon facebook"><a href="https://www.facebook.com/gsetcrw" target="_blank"></a></li>
-              <li class="icon linkedin"><a href="https://www.linkedin.com/in/roger-wu/" target="_blank"></a></li>
+              <li class="icon facebook"><a href="https://www.facebook.com/ryanmaddux.lin" target="_blank"></a></li>
+              <!-- <li class="icon linkedin"><a href="https://www.linkedin.com/in/roger-wu/" target="_blank"></a></li> -->
             </ol>
           </li>
         </ol>
