remove andrew goa

--- a/index.html
+++ b/index.html
@@ -486,8 +486,7 @@
       <svg class="triangleBottom"><use xlink:href="#triangle_figure"/></svg>
     </ul>
     <!-- Andrew Goa -->
-    <ul class="andrew-goa">
-      <!-- <svg class="triangleTop"><use xlink:href="#triangle_figure"/></svg> -->
+    <!-- <ul class="andrew-goa">
       <div class="wrap">
         <li class="img"></li>
         <ol class="text_group">
@@ -502,7 +501,7 @@
         </ol>
       </div>
       <svg class="triangleBottom"><use xlink:href="#triangle_figure"/></svg>
-    </ul>
+    </ul> -->
     <!-- Matthew Liu -->
     <ul class="matthew-liu">
       <!-- <svg class="triangleTop"><use xlink:href="#triangle_figure"/></svg> -->
