remove icon NTHU

--- a/index.html
+++ b/index.html
@@ -713,7 +713,7 @@
         <li class="icon BerkeleyBX"><a href="https://xcelerator.berkeley.edu/" target="_blank"></a></li>
         <li class="icon HKUOSAT"><a href="https://www.ust.hk/" target="_blank"></a></li>
         <li class="icon NTU"><a href="https://www.ntu.edu.tw/" target="_blank"></a></li>
-        <li class="icon NTHU"><a href="https://www.nthu.edu.tw/" target="_blank"></a></li>
+        <!-- <li class="icon NTHU"><a href="https://www.nthu.edu.tw/" target="_blank"></a></li> -->
         <li class="icon UNC"><a href="https://www.nccu.edu.tw/app/home.php" target="_blank"></a></li>
         <li class="icon NTUOTN"><a href="https://www.ntut.edu.tw/" target="_blank"></a></li>
         <li class="icon NTUOB"><a href="https://www.ntub.edu.tw/" target="_blank"></a></li>
